<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/help_menu_game_mode">
        <Preference
            android:selectable="false"
            android:persistent="false"
            android:icon="@drawable/ic_people_black_24px"
            android:summary="@string/help_menu_game_mode_dual_player"/>
        <Preference
            android:selectable="false"
            android:persistent="false"
            android:icon="@drawable/ic_cpu_easy"
            android:summary="@string/help_menu_game_mode_vs_ai_easy"/>
        <Preference
            android:selectable="false"
            android:persistent="false"
            android:icon="@drawable/ic_cpu_hard"
            android:summary="@string/help_menu_game_mode_vs_ai_hard"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/help_menu_grid_size">
        <Preference
            android:selectable="false"
            android:persistent="false"
            android:summary="@string/help_menu_grid_size_description"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/help_menu_start">
        <Preference
            android:selectable="false"
            android:persistent="false"
            android:summary="@string/help_menu_quick_start"/>
        <Preference
            android:selectable="false"
            android:persistent="false"
            android:summary="@string/help_menu_settings"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/help_how_to_play">
        <Preference
            android:selectable="false"
            android:persistent="false"
            android:summary="@string/help_game_intro"/>
        <Preference
            android:selectable="false"
            android:persistent="false"
            android:summary="@string/help_game_step_one"/>
        <Preference
            android:selectable="false"
            android:persistent="false"
            android:summary="@string/help_game_step_two"/>
        <Preference
            android:selectable="false"
            android:persistent="false"
            android:summary="@string/help_game_step_three"/>
        <Preference
            android:selectable="false"
            android:persistent="false"
            android:summary="@string/help_game_step_four"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/ship_set_title">
        <Preference
            android:selectable="false"
            android:persistent="false"
            android:summary="@string/ship_set_message" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/placement_tutorial_title">
        <Preference
            android:selectable="false"
            android:persistent="false"
            android:summary="@string/placement_tutorial_text" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/help_privacy_heading">
        <Preference
            android:summary="@string/help_permissions_description"
            android:title="@string/help_permissions_heading" />
    </PreferenceCategory>

</PreferenceScreen>