<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lose_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_dialog_loss"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lose_dialog_attempts_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_attempts"
                android:layout_marginEnd="1pt"
                android:layout_gravity="end"/>

            <TextView
                android:id="@+id/lose_dialog_time_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_time"
                android:layout_marginEnd="1pt"
                android:layout_gravity="end"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lose_dialog_attempts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00"/>

            <TextView
                android:id="@+id/lose_dialog_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00:00"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>