<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:gravity="center"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_vertical_margin" />

    <TextView
        android:id="@+id/ship_set_size_five_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ship_set_size_five_ships"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <Button
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:text="-"
            android:onClick="subtractShipOfSize5"
            style="@style/AppBorderlessButtonStyle" />

        <TextView
            android:id="@+id/ship_set_size_five_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>

        <Button
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:text="+"
            android:onClick="addShipOfSize5"
            style="@style/AppBorderlessButtonStyle" />

    </LinearLayout>

    <TextView
        android:id="@+id/ship_set_size_four_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ship_set_size_four_ships"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <Button
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:text="-"
            android:onClick="subtractShipOfSize4"
            style="@style/AppBorderlessButtonStyle" />

        <TextView
            android:id="@+id/ship_set_size_four_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>

        <Button
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:text="+"
            android:onClick="addShipOfSize4"
            style="@style/AppBorderlessButtonStyle" />

    </LinearLayout>

    <TextView
        android:id="@+id/ship_set_size_three_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ship_set_size_three_ships"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <Button
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:text="-"
            android:onClick="subtractShipOfSize3"
            style="@style/AppBorderlessButtonStyle" />


        <TextView
            android:id="@+id/ship_set_size_three_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>

        <Button
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:text="+"
            android:onClick="addShipOfSize3"
            style="@style/AppBorderlessButtonStyle" />

    </LinearLayout>

    <TextView
        android:id="@+id/ship_set_size_two_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ship_set_size_two_ships"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:text="-"
            android:onClick="subtractShipOfSize2"
            style="@style/AppBorderlessButtonStyle" />

        <TextView
            android:id="@+id/ship_set_size_two_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>

        <Button
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:text="+"
            android:onClick="addShipOfSize2"
            style="@style/AppBorderlessButtonStyle" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/ship_set_place_ships_button"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/main_button_place_ships"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickPlaceShips"
        style="@style/AppBorderlessButtonStyle" />

    <Button
        android:id="@+id/ship_set_button"
        android:text="@string/ship_set_start_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickShipSetReady"
        style="@style/AppBorderlessButtonStyle" />

</LinearLayout>
